// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <div
    class="size-[72px] rounded-full border border-transparent no-underline hover:ring hover:ring-purple-500 bg-[#f5f5f5]"
  >
    <a
      href="/#"
    >
      label
    </a>
  </div>
  <span
    class="flex justify-center text-sm font-normal"
    id=":r0:"
  >
    Default
  </span>
</div>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <div
    class="size-[72px] rounded-full border border-transparent no-underline hover:ring hover:ring-purple-500 bg-[#f5f5f5]"
  >
    <a
      href="/#"
    >
      label
    </a>
  </div>
  <span
    class="flex justify-center text-sm font-normal"
    id=":r3:"
  >
    Disabled, nonselected
  </span>
</div>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <div
    class="size-[72px] rounded-full border border-transparent no-underline hover:ring hover:ring-purple-500 bg-[#697077]"
  >
    <a
      href="/#"
    >
      label
    </a>
  </div>
  <span
    class="flex justify-center text-sm font-normal"
    id=":r2:"
  >
    Disabled, nonselected
  </span>
</div>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <div
    class="size-[72px] rounded-full border border-transparent no-underline hover:ring hover:ring-purple-500 bg-[#697077]"
  >
    <a
      href="/#"
    >
      label
    </a>
  </div>
  <span
    class="flex justify-center text-sm font-normal"
    id=":r4:"
  >
    Disabled, nonselected
  </span>
</div>
`;

exports[`Snapshot testing > selected 1`] = `
<div
  class="flex flex-col items-center justify-center px-1"
>
  <div
    class="size-[72px] rounded-full border border-transparent no-underline hover:ring hover:ring-purple-500 bg-[#697077]"
  >
    <a
      href="/#"
    >
      label
    </a>
  </div>
  <span
    class="flex justify-center text-sm font-normal"
    id=":r1:"
  >
    Selected
  </span>
</div>
`;
